# afil

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  build-linux.sh  configure-linux.sh  interpreter.sln
afil/: CMakeLists.txt
afil/src/: afil.hh  built_in_structures.hh  c_transpiler.cc  complete_expression.cc  complete_expression.hh  complete_scope.cc  complete_scope.hh  complete_statement.hh  constexpr.cc  constexpr.hh  function_id.hh  incomplete_expression.cc  incomplete_expression.hh  incomplete_module.cc  incomplete_module.hh  incomplete_scope.cc  incomplete_scope.hh  incomplete_statement.cc  incomplete_statement.hh  interpreter.cc  interpreter.hh  interpreter.inl  lexer.cc  lexer.hh  operator.cc  operator.hh  parser.cc  parser.hh  pretty_print.cc  program.cc  program.hh  syntax_error.cc  syntax_error.hh  template_instantiation.cc  template_instantiation.hh
afil/src/utils/: algorithm.hh  charconv.hh  compatibility.hh  expected.hh  function_ptr.hh  half.hh  intcmp.hh  load_dll.cc  load_dll.hh  map.hh  overload.hh  span.hh  string.cc  string.hh  unreachable.cc  unreachable.hh  utils.cc  utils.hh  value_ptr.hh  variant.hh  warning_macro.hh
exe/: CMakeLists.txt
exe/src/: main.cc
interpreter/: interpreter.vcxproj  span.natvis  test_output.c
interpreter/src/: afil.cc  afil.hh  built_in_structures.hh  c_transpiler.cc  c_transpiler.hh  callc.cc  callc.hh  callc.inl  complete_expression.cc  complete_expression.hh  complete_module.cc  complete_module.hh  complete_scope.cc  complete_scope.hh  complete_statement.cc  constexpr.cc  constexpr.hh  expression.cc  expression.hh  function_id.hh  incomplete_expression.cc  incomplete_expression.hh  incomplete_module.cc  incomplete_module.hh  incomplete_scope.cc  incomplete_scope.hh  incomplete_statement.hh  interpreter.cc  interpreter.hh  interpreter.inl  lexer.cc  lexer.hh  main.cc  module.hh  name_equal.hh  operator.cc  operator.hh  out.hh  overload.hh  parser.cc  (+22 more)
interpreter/src/tests/: callc.tests.cc  interpreter.tests.cc  main.cc  main.tests.cc
interpreter/src/utils/: algorithm.hh  expected.hh  function_ptr.hh  load_dll.cc  load_dll.hh  multicomparison.hh  out.hh  span.hh  string.cc  string.hh  value_ptr.hh  variant.hh  warning_macro.hh
interpreter/test_files/: ivec2.afil  main.afilm  math.afilm
interpreter/tests/: algorithm.tests.cc  c_transpiler.tests.cc  callc.tests.cc  interpreter.tests.cc  main.tests.cc  span.tests.cc  value_ptr.tests.cc  variant.tests.cc
test_dll/: test_dll.vcxproj
test_dll/src/: main.cc
test_files/: array_utils.afil  main.afil  main.afilm  memory.afil  memory.afilm  print.afil  print.afilm  vector.afil  vector.afilm
tests/: CMakeLists.txt  conanfile.txt
tests/src/: algorithm.tests.cc  c_transpiler.tests.cc  callc.tests.cc  interpreter.tests.cc  main.tests.cc  span.tests.cc  string.tests.cc  value_ptr.tests.cc  variant.tests.cc
tests/tests_main/: CMakeLists.txt  main.tests.cc
